package cl.interfaces;

/**
 * Interfaz que define contrato de comportamiento para despachar pedidos.
 */

public interface Despachable {
	public void despachar();
}
