package cl.interfaces;

/**
 * Interfaz que define contrato para ver historial
 */

public interface Rastreable {
	public void verHistorial();
}
