@startuml
interface cl.interfaces.Despachable {
+ void despachar()
}

class cl.model.PedidoEncomienda {
+ void asignarRepartidor()
+ int calcularTiempoEntrega()
+ void mostrarResumen()
}

class cl.app.Main {
+ {static} void main(String[])
}

interface cl.interfaces.Rastreable {
+ void verHistorial()
}

class cl.service.ControladorDeEnvios {
- List<Pedido> historialEntregas
+ void registrarPedido(Pedido)
+ void verHistorial()
}


class cl.model.Repartidor {
- String nombre
- List<Pedido> pedidosAsignados
+ void agregarPedido(Pedido)
+ void run()
+ String getNombre()
+ void setNombre(String)
+ List<Pedido> getPedidosAsignados()
+ void setPedidosAsignados(List<Pedido>)
}


class cl.model.PedidoComida {
+ void asignarRepartidor()
+ int calcularTiempoEntrega()
+ void mostrarResumen()
}

class cl.model.PedidoExpress {
+ void asignarRepartidor()
+ int calcularTiempoEntrega()
+ void mostrarResumen()
}

abstract class cl.model.Pedido {
# String idPedido
# String direccionEntrega
# double distanciaKm
# String repartidorAsignado
# String estadoPedido
+ void asignarRepartidor(String)
+ {abstract}void asignarRepartidor()
+ {abstract}int calcularTiempoEntrega()
+ void mostrarResumen()
+ String getIdPedido()
+ void setIdPedido(String)
+ String getDireccionEntrega()
+ void setDireccionEntrega(String)
+ double getDistanciaKm()
+ void setDistanciaKm(double)
+ String getRepartidorAsignado()
+ void setRepartidorAsignado(String)
+ String getEstadoPedido()
+ void setEstadoPedido(String)
+ void despachar()
+ void cancelar()
+ void verHistorial()
+ String toString()
}


interface cl.interfaces.Cancelable {
+ void cancelar()
}



cl.model.Pedido <|-- cl.model.PedidoEncomienda
cl.interfaces.Rastreable <|.. cl.service.ControladorDeEnvios
cl.model.Runnable <|.. cl.model.Repartidor
cl.model.Pedido <|-- cl.model.PedidoComida
cl.model.Pedido <|-- cl.model.PedidoExpress
cl.interfaces.Cancelable <|.. cl.model.Pedido
cl.interfaces.Despachable <|.. cl.model.Pedido
cl.interfaces.Rastreable <|.. cl.model.Pedido
@enduml